package SimpleRemote.command;

public interface Command {
    public void execute();
}
