package SimpleRemote.receiver;

public class Light {
    public void on() {
        System.out.println("Light is On");
    }
}
