' Generated by UML Generator
' Encoded: VLBBQiCm4BpxA_QeO1nozg6af50AXOIwq4FfGPMtZgWUHbgNqZJzzigF6BjHUf50CxCxEzgr9-weqIhnxzBKt74DGd7lhucSV6q8xuGrXVn2M2LxMI88wOJ29EbOK4XTAtn0RGatrf2p2Wu9m8zNbdBOMAsvASD3beKZZT3PeWKyqi1behz7yIA73olR6cdmGzOySRzpw3sMx8GTJtxkPRMdpa5gpJby6mQiyCPQrtEQ-fmpS_U8VYXt24cH54VGN1h6NULpA496fdf-YTlOcc62FX7LlkKzD0Oo9x8ffyi5Fr64J_XlacsDyqRL2EKJsjWogcHnqIKFqX2wDouGffrZpDY2PDdLk1b_abeklozYhQnFBpxyJ1kdj2KcaQpHb67tVm4
' URL: http://www.plantuml.com/plantuml/uml/VLBBQiCm4BpxA_QeO1nozg6af50AXOIwq4FfGPMtZgWUHbgNqZJzzigF6BjHUf50CxCxEzgr9-weqIhnxzBKt74DGd7lhucSV6q8xuGrXVn2M2LxMI88wOJ29EbOK4XTAtn0RGatrf2p2Wu9m8zNbdBOMAsvASD3beKZZT3PeWKyqi1behz7yIA73olR6cdmGzOySRzpw3sMx8GTJtxkPRMdpa5gpJby6mQiyCPQrtEQ-fmpS_U8VYXt24cH54VGN1h6NULpA496fdf-YTlOcc62FX7LlkKzD0Oo9x8ffyi5Fr64J_XlacsDyqRL2EKJsjWogcHnqIKFqX2wDouGffrZpDY2PDdLk1b_abeklozYhQnFBpxyJ1kdj2KcaQpHb67tVm4
' Generated on: 2025-12-10T00:51:27.068971

@startuml
skinparam classAttributeIconSize 0
hide circle

class SimpleRemoteControl {
  ~slot: Command
  --
  +SimpleRemoteControl()
  +setCommand(command: Command): void
  +buttonWasPressed(): void
}

class Light {
  +on(): void
}

class GarageDoor {
  +up(): void
}

class RemoteControlTest {
  +{static} main(args: String[]): void
}

class LightOnCommand {
  ~light: Light
  --
  +LightOnCommand(light: Light)
  +execute(): void
}

class GarageDoorOpenCommand {
  ~garageDoor: GarageDoor
  --
  +GarageDoorOpenCommand(garageDoor: GarageDoor)
  +execute(): void
}

interface Command {
  +execute(): void
}

SimpleRemoteControl --> Command
LightOnCommand ..|> Command
LightOnCommand --> Light
GarageDoorOpenCommand ..|> Command
GarageDoorOpenCommand --> GarageDoor
@enduml